--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -144,7 +144,7 @@ Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios result
 
 Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation (\SI; Fig. S10). The \pCOtwo values from the 5~Ma ``paleo-SEAI'' scenario overlap with many proxy-based estimates \cite{Foster2017a} as well as values that emerge from approaches that assimilate climate and ice sheet model output with benthic \dO data \cite{van-de-Wal2011a, Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early to mid-Miocene, indicating that the increase in subaerially exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with emergence of the SEAI are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
-The results of our ``paleo-SEAI'' scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of low-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}, its contribution is less than that of the SEAI, which have high-relief and a wet tropical climate in conjunction with high Ca+Mg lithologies.
+The results of our ``paleo-SEAI'' scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of lower-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $\sim$300--500~ppm, indicating that the presence of mafic rocks in these igneous provinces affects steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}. However, the higher 526--678~ppm values for the 15~Ma ``paleo-SEAI'' scenario illustrate that higher relief and a wet tropical climate significantly increase the efficiency of \COtwo consumption, especially when paired with high Ca+Mg lithologies. As such, arc-continent collisions in the tropics are likely more important for driving long-term changes in \pCOtwo than the eruption of flood basalts \cite{Macdonald2019a, Park2019a}.
 
 Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated with the emergence of the SEAI and enhanced silicate weathering is $\sim$19~ppm \cite{Molnar2015a}, in which case their emergence would be a relatively minor contributor to Neogene cooling. This 19~ppm estimate was obtained using a 0-D equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor that is intended to account for the influence of both runoff and temperature. \pCOtwo was then estimated from the calculated temperature using a simple energy balance equation. However, the relationship between mean global temperature (or \pCOtwo) and weathering-rate-weighted land area is not linear. Furthermore, this simple linear relationship ignores spatial variability in topography and climatology, and only crudely accounts for spatial variability in lithology. In fact, the 19~ppm estimate is closer in magnitude to the decrease in \pCOtwo that we estimate if mafic volcanics associated with the Deccan Traps (a relatively flat area outside of the warm and wet tropics) are replaced with the Ca+Mg concentration of bulk continental crust (22--70 ppm; Fig. \ref{fig:scenario_pCO2}). The significant difference in steady-state \pCOtwo estimated between the ``removed Deccan Traps'' scenario and the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2}) demonstrates that considering changes in the spatial distribution of lithologies alone is not adequate for estimating changes in steady-state \pCOtwo. Instead, spatially varying topography and climatology significantly modulates silicate weathering rates, and must be accounted for when estimating \pCOtwo change associated with paleogeographic change.
 
@@ -171,7 +171,7 @@ However, changes in the volcanic degassing flux would have modulated changes in 
 
 \subsection*{Himalayan Uplift}
 
-Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the globally averaged ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically unique lithologies. For example, unusually radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a direct proxy for silicate weathering fluxes. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision.
+Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a, Edmond1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the globally averaged ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically unique lithologies. For example, unusually radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a direct proxy for silicate weathering fluxes. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision.
 
 Himalayan uplift would have affected geological carbon sinks, either via increased weathering of silicate rocks \cite{Raymo1992a} or enhanced burial of organic matter in the Bengal Fan \cite{Galy2007a}. Increased weathering of the emerging SEAI would have occurred in tandem with such changes in the Himalaya, such that the effects of these paleogeographic changes on geochemical proxy records, like marine \SrSr, become difficult to disentangle. In addition, given the large uncertainty associated with changes in regional climatology across Asia due to Himalayan orogeny, developing quantitative estimates of the evolution of global silicate weathering fluxes associated with Himalayan orogeny remains a major challenge.
 
@@ -181,7 +181,7 @@ If geological carbon sources remain approximately constant, global alkalinity de
 
 Alkalinity generated by the weathering of silicate Na and K consumes \COtwo until that alkalinity is removed via reverse weathering reactions \cite{Sun2016a}. Therefore, sustained imbalances in the Na and K cycles could consume/generate significant quantities of \COtwo over multi-million year time-scales. However, the biogeochemical cycles of Na and K are currently poorly constrained. As such, the residence time of these two cations, and therefore the time-scale over which an imbalance in their cycles could drive \COtwo consumption/generation, is not well known. Estimates for these values in the literature range from $\sim$45-80~m.y. for Na, and $\sim$8-10~m.y. for K \cite{Emerson2008a, Lecuyer2016a}. Furthermore, it is not clear how to parameterize the output fluxes of Na and K. We have therefore made the assumption in GEOCLIM that alkalinity generated by the weathering of silicate Na and K is instantaneously removed by reverse weathering reactions, but acknowledge that further work is necessary to evaluate how important imbalances in the Na and K cycles are for the geologic carbon cycle.
 
-The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
+The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. An increased flux of dissolved nutrients derived from silicate weathering could even strengthen the biological carbon pump and sequester \COtwo as organic carbon in deep marine sediments \cite{Hartmann2013a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
 
 \section*{Conclusions}
 
