--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -235,6 +235,8 @@ For the climate model component of GEOCLIM, we use temperature and runoff fields
 
 Given that precipitation in the SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water \citep{Donohoe2017a}, the current approach of using a climate model forced by modern paleogeography for all SEAI scenarios is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable. The climate model also assumes the present-day extent of ice-sheets for all \pCOtwo levels. However, without ice-sheets, the global climate would be warmer for a given \pCOtwo (hysteresis loop; \citealp{Pollard2005b}), but the amount of emergent land would be lower. We expect this bias to be minimal, as all of our modeled \pCOtwo estimates fall below the glaciation threshold for Antarctica.
 
+\citet{Zhu2020a} reviewed three climate models (CESM2, CESM1, and CCSM4) more recent than the GFDL CM2.0 experiments, and found that they had equilibrium climate sensitivities (the long-term response of global mean surface temperature to a doubling of \pCOtwo) of 5.3, 4.2, and 3.2\degreesC respectively. Of these three climate models, they found that the equilibrium climate sensitivity of CESM1 (4.2\degreesC) was most in agreement with paleo-\pCOtwo and global mean surface temperature data. The GFDL CM2.0 experiments have a lower equilibrium climate sensitivity ($\sim$2\degreesC) than CESM1. This discrepancy indicates that our \pCOtwo estimates (Fig. \ref{fig:scenario_pCO2_all}) are biased toward higher values than what would have been obtained if we had used CESM1 as the climate model component. However, equilibrium climate sensitivity over the Neogene remains poorly constrained, with estimates ranging from 1.5--4.5\degreesC \citep{Zhu2020a}.
+
 \section*{Southeast Asian Islands Scenarios}
 
 \begin{figure}[h!]
