fix figure paths

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -248,7 +248,7 @@ Given that precipitation in the SEAI is primarily driven by large-scale convecti
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{Manuscript/Figures/lithology_areas.pdf}
+    \includegraphics[width=1\textwidth]{Figures/lithology_areas.pdf}
     \caption{Total area of the lithologic categories within the SEAI for each tested scenario. Note that the grey bars in the middle panel indicate the fractional area of each lithologic category for the entire Earth.}
     \label{fig:lithology_areas}
 \end{figure}
