Updates from Overleaf

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -144,9 +144,9 @@ These supplementary information materials provide details on the model framework
 
 We restricted the calculation of the weathering fluxes to the flux of dissolved Ca+Mg originating from continental silicate weathering, as they are essential for the long-term consumption of atmospheric \COtwo through silicate weathering. To calculate this flux, we need to assign the concentration of Ca and Mg ($\chi_{CaMg}$) within the unweathered bedrock (Fig. 1 in the main text). Previous implementations of GEOCLIM have used a ``diffuse lithology'' where all exposed land is assigned the composition of bulk upper continental crust. These previous studies assumed that the weathering rates of all rocks was the same for each continental grid element, provided that the grid element was submitted to the same climatic conditions. Given that the hypothesis we seek to test involves the varying concentration of cations in different lithologies, we instead implement a more realistic lithologically-resolved version of the model.
 
-The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
+The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). Note that the siliciclastic sediment lithologic category also includes sedimentary sequences in which any carbonate is identified but is not the dominant lithology \cite{Hartmann2012a}. We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
 
-The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/m$^{3}$), and mafic (10,317~mol/m$^{3}$) lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}; calculations made in the code within the repository). For metamorphic and siliciclastic lithologies, we explore a range of feasible Ca+Mg concentrations during calibration of the silicate weathering component of GEOCLIM (\textit{GEOCLIM Calibration}).
+The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/m$^{3}$), and mafic (10,317~mol/m$^{3}$) lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}; calculations made in the code within the repository). For metamorphic and siliciclastic lithologies, we explore a range of feasible Ca+Mg concentrations during calibration of the silicate weathering component of GEOCLIM (\textit{GEOCLIM Calibration}). This approach makes the simplifying assumption that all pixels of a given lithologic category share the same Ca+Mg concentration.
 
 \begin{figure}[h!]
     \centering
@@ -229,13 +229,13 @@ Global CO$_{2}$ consumption calculated from these 573 parameter combinations ran
 
 Each parameter combination predicts a different total \COtwo consumption that should match the \COtwo degassing at steady-state. Hence, in the non-calibration GEOCLIM experiments, each parameter combination is used with its corresponding steady-state \COtwo degassing. In these estimates, we are not including the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
+A related issue is that our analysis focuses on the weathering of Ca and Mg silicates. Sources of alkalinity to the ocean include the four major cations of Ca, Mg, Na and K. A common approach for the long-term carbon cycle follows that of \citet{Berner1984a} where an emphasis is placed on Ca and Mg with the weathering of Na and K silicates considered to not be a long-term sink of \COtwo. The reasoning behind this assumption is that while weathering of these silicates can lead to transient uptake of \COtwo, this uptake is balanced by release. The ultimate mechanism through which silicate weathering sequesters carbon is the incorporation of Ca+Mg carbonates into the lithosphere. While alkalinity generated by the weathering of silicate Na and K consumes \COtwo, that alkalinity is removed through processes such as reverse weathering reactions and exchange for Ca that ultimately precipitates as carbonate \cite{Sun2016a}. An alternative approach for estimating carbon sequestration associated with silicate weathering that sought to incorporate all four cations was taken by \citet{France-Lanord1997a} who used a formulation of $\Delta CO_2 = \Delta Mg + \Delta Ca + 0.15 \Delta Na + 0.1 \Delta K$. This relationship, also applied by \citet{Schopka2011a}, assumes that all Ca$^2+$ and Mg$^2+$ eventually forms carbonates and applies an estimate that 20\% of K$^+$ and 30\% of Na$^+$ exchanges for Ca and Mg and ultimately produces carbonate (and considers charge balance). Overall, uncertainty in the sinks for K and Na and the processes that control them make them difficult to parameterize and model. Given that we are modeling steady-state solutions and the ultimate sequestration of carbon through carbonate formation, we make the simplification of restricting the modeling of carbon sequestration to that associated with Ca and Mg delivery. Different parameterizations such as that of \citet{France-Lanord1997a} could modulate our estimates, but the overall results would be similar.
+
 \section*{Climate Model}
 
 For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm \pCOtwo respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results.
 
 Given that precipitation in the SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water \citep{Donohoe2017a}, the current approach of using a climate model forced by modern paleogeography for all SEAI scenarios is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable. The climate model also assumes the present-day extent of ice-sheets for all \pCOtwo levels. However, without ice-sheets, the global climate would be warmer for a given \pCOtwo (hysteresis loop; \citealp{Pollard2005b}), but the amount of emergent land would be lower. We expect this bias to be minimal, as all of our modeled \pCOtwo estimates fall below the glaciation threshold for Antarctica.
-
-\citet{Zhu2020a} reviewed three climate models (CESM2, CESM1, and CCSM4) more recent than the GFDL CM2.0 experiments, and found that they had equilibrium climate sensitivities (the long-term response of global mean surface temperature to a doubling of \pCOtwo) of 5.3, 4.2, and 3.2\degreesC respectively. Of these three climate models, they found that the equilibrium climate sensitivity of CESM1 (4.2\degreesC) was most in agreement with paleo-\pCOtwo and global mean surface temperature data. The GFDL CM2.0 experiments have a lower equilibrium climate sensitivity ($\sim$2\degreesC) than CESM1. This discrepancy indicates that our \pCOtwo estimates (Fig. \ref{fig:scenario_pCO2_all}) are biased toward higher values than what would have been obtained if we had used CESM1 as the climate model component. However, equilibrium climate sensitivity over the Neogene remains poorly constrained, with estimates ranging from 1.5--4.5\degreesC \citep{Zhu2020a}.
 
 \section*{Southeast Asian Islands Scenarios}
 
@@ -278,7 +278,7 @@ To explore the sensitivity of our results to the inclusion of the Sunda Shelf an
     \label{fig:pCO2_proxies}
 \end{figure}
 
-Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a, Cui2020a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Statistical methods that are often utilized in an attempt to extract trends from this data (e.g. locally-weighted scatter plot smoothing, LOWESS) evaluate the mean (with some weighting) of the highly scattered data in a given time interval. However, such methods are only appropriate for estimating the ``true'' value at any given time interval in datasets in which individual data points are being drawn from a single distribution about a mean value. The \pCOtwo proxy compilation shown in Figure \ref{fig:pCO2_proxies} consists of several distinct techniques and samples, each with their own set of assumptions and associated probability distributions that influence their reported values. Therefore, simply taking the mean of these values neglects the fact that some of these techniques/samples are likely more reliable than the others. Constraining how robust each \pCOtwo proxy technique is remains an important challenge, and as such the ``true'' \pCOtwo could plausibly lie anywhere within the full range of proxy-based \pCOtwo estimates for any given time interval. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
+Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a, Cui2020a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Statistical methods that are often utilized in an attempt to extract trends from this data (e.g. locally-weighted scatter plot smoothing, LOWESS) evaluate the mean (with some weighting) of the highly scattered data in a given time interval. However, such methods are only appropriate for estimating the ``true'' value at any given time interval in datasets in which individual data points are being drawn from a single distribution about a mean value. The \pCOtwo proxy compilation shown in Figure \ref{fig:pCO2_proxies} consists of several distinct techniques and samples, each with their own set of assumptions and associated probability distributions that influence their reported values. Therefore, running a regression through these values neglects the fact that some of these techniques/samples are likely more reliable than the others. Constraining how robust each \pCOtwo proxy technique is remains an important challenge, and as such the ``true'' \pCOtwo could plausibly lie anywhere within the full range of proxy-based \pCOtwo estimates for any given time interval. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
