--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -61,7 +61,7 @@
 \leadauthor{Park}
 
 % Authors must submit a 120-word maximum statement about the significance of their research paper written at a level understandable to an undergraduate educated scientist outside their field of speciality. The primary goal of the significance statement is to explain the relevance of the work in broad context to a broad readership. The significance statement appears in the paper itself and is required for all research papers.
-\significancestatement{The Southeast Asian islands are a modern-day hotspot of \COtwo consumption via silicate weathering. Since $\sim$15 million years ago, these islands have been increasing in size at the same time that Earth's climate has been cooling. Here we test the hypothesis this global cooling could have been driven by tectonic emergence of the Southeast Asian islands. Using a new compilation of paleoshorelines in conjunction with a coupled silicate weathering and climate model, we find that this emergence is associated with a large decrease in \pCOtwo. Without these changes in tropical island paleogeography, there would not have been large Northern Hemisphere ice sheets as a defining feature of Earth's climate over the past 3 million years.}
+\significancestatement{The Southeast Asian islands are a modern-day hotspot of \COtwo consumption via silicate weathering. Since $\sim$15 million years ago, these islands have been increasing in size at the same time that Earth's climate has been cooling. Here we test the hypothesis that this global cooling could have been driven by tectonic emergence of the Southeast Asian islands. Using a new compilation of paleoshorelines in conjunction with a coupled silicate weathering and climate model, we find that this emergence is associated with a large decrease in \pCOtwo. Without these changes in tropical island paleogeography, there would not have been large Northern Hemisphere ice sheets as a defining feature of Earth's climate over the past 3 million years.}
 
 % Please include corresponding author, author contribution and author declaration information
 \authorcontributions{Author contributions: Y.P., P.M., Y.G., and N.L.S.-H. designed and implemented the GEOCLIM model. F.A.M. and E.S.C.A. constructed the paleoshoreline database. Y.P. and P.M. executed the model and analyzed the data in consultation with N.L.S.-H and Y.G.. Y.P., P.M., Y.G., F.A.M., and N.L.S.-H. wrote the manuscript.}
@@ -89,7 +89,7 @@ Steep topography, a tropical climate, and mafic lithologies contribute to effici
 
 Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks and through organic carbon burial \cite{Kump2000a}. Chemical weathering delivers alkalinity and cations to the ocean which drives carbon sequestration through carbonate precipitation. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks increase and \pCOtwo falls, temperature decreases and the hydrological cycle is weakened, causing the efficiency of the silicate weathering sink to decrease until a new steady-state is achieved at lower \pCOtwo \cite{Kump1997a}.
 
-Topography, climate, and lithology all effect chemical weathering. High-relief regions generally lack extensive regolith development, and thus tend to have reaction-limited weathering regimes that are more prone to adjust when climate changes \cite{Gabet2009a, West2012a, Maher2014a}. High physical erosion rates contribute to high chemical weathering fluxes in these high-relief regions \citep{Godderis2017b}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Mafic rocks have higher Ca and Mg concentrations and dissolution rates than felsic rocks, and thus have the potential to more efficiently sequester carbon through silicate weathering \cite{Dessert2003a}. These factors have led to the proposal that arc-continent collisions, which create steep landscapes of mafic lithologies, within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2020a}.
+Topography, climate, and lithology all effect chemical weathering. High-relief regions generally lack extensive regolith development, and thus tend to have reaction-limited weathering regimes that are more prone to adjust when climate changes \cite{Gabet2009a, West2012a, Maher2014a}. High physical erosion rates contribute to high chemical weathering fluxes in these high-relief regions \citep{Godderis2017b}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Mafic rocks have higher Ca and Mg concentrations and dissolution rates than felsic rocks, and thus have the potential to more efficiently sequester carbon through silicate weathering \cite{Dessert2003a}. These factors have led to the proposal that arc-continent collisions, which create steep landscapes that include mafic lithologies, within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2020a}.
 
 Quantitatively estimating the magnitude of decrease in steady-state \pCOtwo associated with the emergence of a region with a high carbon sequestration potential, such as the SEAI, requires constraints on changing tectonic context and accounting of associated feedbacks. As this region emerges, the total global silicate weathering flux will transiently exceed the volcanic degassing flux, causing \pCOtwo to initially decline until a new steady-state is established where the total magnitude of the \COtwo sinks is the same as before the change. However, the sensitivity of the silicate weathering flux in any particular location to this change in \pCOtwo is variable and dependent on the specific topography, climate, and lithology at that location. Furthermore, how regional climate responds to this change in \pCOtwo is itself spatially variable. Therefore, the magnitude of \pCOtwo change that is required to balance the total global silicate weathering flux with the volcanic degassing flux will depend on the specific spatial distribution of topography, climate, and lithology at the time of emergence. As a result, any attempt to meaningfully estimate the decrease in steady-state \pCOtwo associated with emergence of the SEAI must model spatially resolved climatology and silicate weathering fluxes in tandem and account for the spatial distribution of the factors that affect these inter-connected systems.
 
@@ -106,9 +106,9 @@ To estimate the decrease in steady-state \pCOtwo associated with the increase of
     \label{fig:regolith_schematic}
 \end{figure}
 
-The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for subaerially exposed land. We assume that Ca and Mg are the only cations that consume \COtwo over geologic time-scales, such that each mole of Ca or Mg that is dissolved by silicate weathering consumes one mole of \COtwo. While reverse weathering is another potential sink for Ca or Mg \citep{Michalopoulos1995a}, its parameterization is unclear and it has been interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}, and so we do not include it in our model. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and all bedrock was assigned identical chemical compositions \cite{Godderis2017c}. More recent versions of GEOCLIM implement regolith development and soil shielding (Fig. \ref{fig:regolith_schematic}), which introduces a dependence on erosion rate (and therefore topographic slope) \cite{Maffre2018a}. While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered.
+The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for subaerially exposed land. We assume that Ca and Mg are the only cations that consume \COtwo over geologic time-scales, such that each mole of Ca or Mg that is dissolved by silicate weathering consumes one mole of \COtwo. While reverse weathering is another potential sink for Ca or Mg \citep{Michalopoulos1995a}, its parameterization is unclear and it has been interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}, and we do not include it in our model. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and all bedrock was assigned identical chemical compositions \cite{Godderis2017c}. More recent versions of GEOCLIM implement regolith development and soil shielding (Fig. \ref{fig:regolith_schematic}), which introduces a dependence on erosion rate (and therefore topographic slope) \cite{Maffre2018a}. While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered.
 
-We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM (\SI). The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment. Each land pixel is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data of these lithologic categories compiled in EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative \cite{Schopka2011a}. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. The siliciclastic sediment lithologic category also includes sedimentary sequences in which any carbonate is identified but is not the dominant lithology \cite{Hartmann2012a}. We explore a range of feasible Ca+Mg concentrations for metamorphic rocks and siliciclastic sediment during calibration of the silicate weathering component of GEOCLIM, but assume that all pixels of a given lithologic category share the same Ca+Mg concentration.
+We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM (\SI). The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment. Each land pixel is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data of these lithologic categories compiled in EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo could be conservative \cite{Schopka2011a}. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We explore a range of feasible Ca+Mg concentrations for metamorphic rocks and siliciclastic sediment during calibration of the silicate weathering component of GEOCLIM.
 
 \subsection*{Calibration}
 
@@ -140,13 +140,15 @@ We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial e
 
 \section*{\pCOtwo Estimates}
 
-Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm. Increasing seawater Mg/Ca since ca. 15~Ma \cite{Higgins2012a} is consistent with an increasing proportion of the global silicate weathering flux being derived from mafic and ultramafic sources. We note that these ``paleo-SEAI'' scenarios do not account for Neogene changes outside of the SEAI (e.g. changes in ocean/atmosphere circulation, volcanic degassing, and weathering fluxes elsewhere on Earth, discussed in \textit{Alternative Mechanisms for Neogene Cooling}). Therefore, these results do not imply that \pCOtwo would have been observed to be 526--678~ppm at 15~Ma, but rather that emergence of the SEAI alone is responsible for decreasing \pCOtwo by 240--392~ppm (526--678~ppm minus 286~ppm) over the past 15~m.y.
+Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm. These ``paleo-SEAI'' scenarios do not account for Neogene changes outside of the SEAI (e.g. changes in ocean/atmosphere circulation, volcanic degassing, and weathering fluxes elsewhere on Earth, discussed in \textit{Alternative Mechanisms for Neogene Cooling}). Therefore, these results are not estimating \pCOtwo at 15~Ma, but rather are quantifying \pCOtwo change associated with emergence of the SEAI alone.
 
 Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation (\SI; Fig. S10). The \pCOtwo values from the 5~Ma ``paleo-SEAI'' scenario overlap with many proxy-based estimates \cite{Foster2017a} as well as values that emerge from approaches that assimilate climate and ice sheet model output with benthic \dO data \cite{van-de-Wal2011a, Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early to mid-Miocene, indicating that the increase in subaerially exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with emergence of the SEAI are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
 The results of our ``paleo-SEAI'' scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth's climate state. To independently explore the effect of the modern-day surface exposure of lower-relief basaltic lavas on steady-state \pCOtwo \cite{Kent2013a}, we replace mafic volcanics associated with the Deccan Traps, Ethiopian Traps, and Columbia River Basalts with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $\sim$300--500~ppm, indicating that the presence of mafic rocks in these igneous provinces affects steady-state \pCOtwo as has been suggested to be important for Paleogene cooling \cite{Kent2013a}. However, the higher 526--678~ppm values for the 15~Ma ``paleo-SEAI'' scenario illustrate that higher relief and a wet tropical climate significantly increase the efficiency of \COtwo consumption, especially when paired with high Ca+Mg lithologies. As such, arc-continent collisions in the tropics are likely more important for driving long-term changes in \pCOtwo than the eruption of flood basalts \cite{Macdonald2019a, Park2019a}.
 
-Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated with the emergence of the SEAI and enhanced silicate weathering is $\sim$19~ppm \cite{Molnar2015a}, in which case their emergence would be a relatively minor contributor to Neogene cooling. This 19~ppm estimate was obtained using a 0-D equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor that is intended to account for the influence of both runoff and temperature. \pCOtwo was then estimated from the calculated temperature using a simple energy balance equation. However, the relationship between mean global temperature (or \pCOtwo) and weathering-rate-weighted land area is not linear. Furthermore, this simple linear relationship ignores spatial variability in topography and climatology, and only crudely accounts for spatial variability in lithology. In fact, the 19~ppm estimate is closer in magnitude to the decrease in \pCOtwo that we estimate if mafic volcanics associated with the Deccan Traps (a relatively flat area outside of the warm and wet tropics) are replaced with the Ca+Mg concentration of bulk continental crust (22--70 ppm; Fig. \ref{fig:scenario_pCO2}). The significant difference in steady-state \pCOtwo estimated between the ``removed Deccan Traps'' scenario and the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2}) demonstrates that considering changes in the spatial distribution of lithologies alone is not adequate for estimating changes in steady-state \pCOtwo. Instead, spatially varying topography and climatology significantly modulates silicate weathering rates, and must be accounted for when estimating \pCOtwo change associated with paleogeographic change.
+Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated with the emergence of the SEAI and enhanced silicate weathering is $\sim$19~ppm \cite{Molnar2015a}, in which case their emergence would be a relatively minor contributor to Neogene cooling. This 19~ppm estimate was obtained using an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor that is intended to account for the influence of both runoff and temperature. \pCOtwo was then estimated from the calculated temperature using a simple energy balance equation. However, the relationship between mean global temperature (or \pCOtwo) and weathering-rate-weighted land area is not linear. Furthermore, this simple linear relationship ignores spatial variability in topography and climatology, and only crudely accounts for spatial variability in lithology. In fact, the 19~ppm estimate is closer in magnitude to the decrease in \pCOtwo that we estimate if mafic volcanics associated with the Deccan Traps (a relatively flat area outside of the warm and wet tropics) are replaced with the Ca+Mg concentration of bulk continental crust (22--70 ppm; Fig. \ref{fig:scenario_pCO2}). The significant difference in steady-state \pCOtwo estimated between the ``removed Deccan Traps'' scenario and the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2}) demonstrates that considering changes in the spatial distribution of lithologies alone is not adequate for estimating changes in steady-state \pCOtwo. Instead, spatially varying topography and climatology significantly modulates silicate weathering rates, and must be accounted for when estimating \pCOtwo change associated with paleogeographic change.
+
+An important caveat for these estimates of \pCOtwo is that our modeling is determining the climatology in the GFDL CM2.0 model at which steady-state is achieved -- a climatology that has an associated \pCOtwo value in the model. However, climate models are variable in their response to changes in \pCOtwo. One way to summarize this variability is through the equilibrium climate sensitivity value -- the steady-state change in global mean surface air temperature associated with a doubling of \pCOtwo. A range of 1.5 to 4.5\degreesC per \pCOtwo doubling was proposed in the landmark Charney report \cite{Charney1979a} and this range was considered to be the credible interval (\textgreater66\% likelihood) in the last IPCC report \cite{Stocker2013a}. Integrating constraints both from understanding of climate feedback processes and the climate record, a recent comprehensive review estimates the 66\% probability range of climate sensitivity to be 2.6 to 3.9\degreesC per \pCOtwo doubling with a 5 to 95\% range of 2.3 to 4.7\degreesC per \pCOtwo doubling \cite{Sherwood2020a}. The equilibrium climate sensitivity associated with the CM2.0 climate models is 2.9\degreesC per \pCOtwo doubling which falls within these ranges although these ranges remain broad. An alternative way to consider the results from our analysis would be that an estimate of 572~ppm (2\times pre-industrial \pCOtwo) for the 15~Ma paleo-SEAI scenario is implying that Earth would be $\sim$2.9\degreesC warmer. If Earth's climate sensitivity is at the higher end of the probable range and higher than in the CM2.0 model, as it is in some climate models, this same amount of Neogene cooling resulting from the emergence of the SEAI could have been driven by a smaller change in \pCOtwo.
 
 \section*{Alternative Mechanisms for Neogene Cooling}
 
@@ -158,7 +160,7 @@ Some hypotheses to explain ice sheet growth over the Neogene invoke changes in o
 
 A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a driver for Neogene cooling. However, proxy-based estimates of the evolution of volcanic degassing fluxes throughout the Neogene are inconsistent with each other, such that not even the sign of the change in volcanic degassing over the past $\sim$15~m.y. is without ambiguity \cite{Godderis2017c}. For example, it has both been estimated that the volcanic degassing flux was $\sim$25\% lower \cite{Cogne2006a} and $\sim$10\% higher \cite{Van-Der-Meer2014a} at 15~Ma relative to the present day.
 
-Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S4), GEOCLIM estimates a pre-industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI led to a change in \pCOtwo of $\sim$280~ppm (``increase in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-industrial to drive the same $\sim$280~ppm change in \pCOtwo (``decrease in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}). This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}.
+Our model framework provides an opportunity to estimate the decrease in volcanic degassing flux necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI; Fig. S4), GEOCLIM estimates a pre-industrial volcanic degassing flux of 4.1$\times$10$^{12}$~mol/yr to balance the silicate weathering flux at 286~ppm \pCOtwo. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI led to a change in \pCOtwo of $\sim$280~ppm (``increase in weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-industrial to drive the same $\sim$280~ppm change in \pCOtwo (``decrease in degassing only'' scenario in Fig. \ref{fig:weatherability_curves}). This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}.
 
 However, changes in the volcanic degassing flux would have modulated changes in \pCOtwo associated with changes in global weatherability. For example, some proxy-based approaches as well as some model-data assimilation approaches estimate that mid-Miocene \pCOtwo was lower than 568~ppm (\SI; Fig. S10). Take a scenario in which \pCOtwo was 400~ppm at 15~Ma. If we assume that the \pCOtwo decrease to the pre-industrial value of 286~ppm was driven by the increase in global weatherability associated with emergence of the SEAI in conjunction with an increase in volcanic degassing which counteracts cooling by increasing the flux of \COtwo to the atmosphere (``increase in weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}), the volcanic degassing flux would have had to have been $\sim$7\% smaller than the pre-industrial. More robust constraints on \pCOtwo (\SI; Fig. S10) and/or volcanic degassing rates over the past 20~m.y. are needed to constrain which of the ``increase in weatherability only'' or ``increase in weatherability and degassing'' scenarios (Fig. \ref{fig:weatherability_curves}) is more representative of the mechanisms driving Neogene cooling.
 
@@ -171,7 +173,7 @@ However, changes in the volcanic degassing flux would have modulated changes in 
 
 \subsection*{Himalayan Uplift}
 
-Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a, Edmond1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the globally averaged ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically unique lithologies. For example, unusually radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a direct proxy for silicate weathering fluxes. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision.
+Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a, Edmond1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the globally averaged ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically unique lithologies. For example, unusually radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a direct proxy for silicate weathering fluxes. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision. Increasing seawater Mg/Ca since ca. 15~Ma \cite{Higgins2012a} is consistent with an increasing proportion of the global silicate weathering flux being derived from mafic and ultramafic sources.
 
 Himalayan uplift would have affected geological carbon sinks, either via increased weathering of silicate rocks \cite{Raymo1992a} or enhanced burial of organic matter in the Bengal Fan \cite{Galy2007a}. Increased weathering of the emerging SEAI would have occurred in tandem with such changes in the Himalaya, such that the effects of these paleogeographic changes on geochemical proxy records, like marine \SrSr, become difficult to disentangle. In addition, given the large uncertainty associated with changes in regional climatology across Asia due to Himalayan orogeny, developing quantitative estimates of the evolution of global silicate weathering fluxes associated with Himalayan orogeny remains a major challenge.
 
@@ -179,9 +181,7 @@ Himalayan uplift would have affected geological carbon sinks, either via increas
 
 If geological carbon sources remain approximately constant, global alkalinity delivery from silicate weathering needs to be approximately constant as well to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced silicate weathering in a region such as the SEAI is compensated by a decrease in silicate weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
 
-Alkalinity generated by the weathering of silicate Na and K consumes \COtwo until that alkalinity is removed via reverse weathering reactions \cite{Sun2016a}. Therefore, sustained imbalances in the Na and K cycles could consume/generate significant quantities of \COtwo over multi-million year time-scales. However, the biogeochemical cycles of Na and K are currently poorly constrained. As such, the residence time of these two cations, and therefore the time-scale over which an imbalance in their cycles could drive \COtwo consumption/generation, is not well known. Estimates for these values in the literature range from $\sim$45-80~m.y. for Na, and $\sim$8-10~m.y. for K \cite{Emerson2008a, Lecuyer2016a}. Furthermore, it is not clear how to parameterize the output fluxes of Na and K. We have therefore made the assumption in GEOCLIM that alkalinity generated by the weathering of silicate Na and K is instantaneously removed by reverse weathering reactions, but acknowledge that further work is necessary to evaluate how important imbalances in the Na and K cycles are for the geologic carbon cycle.
-
-The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. An increased flux of dissolved nutrients derived from silicate weathering could even strengthen the biological carbon pump and sequester \COtwo as organic carbon in deep marine sediments \cite{Hartmann2013a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
+The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter enabled by higher sediment and nutrient delivery could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
 
 \section*{Conclusions}
 
