--- a/Manuscript/References.bib
+++ b/Manuscript/References.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Yuem Park at 2020-08-11 18:12:53 -0700 
+%% Created for Yuem Park at 2020-08-13 07:47:05 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -3825,9 +3825,9 @@
 	Bdsk-Url-1 = {https://doi.org/10.1130/0016-7606(1996)108%3C1438:PPAUOT%3E2.3.CO;2}}
 
 @book{Visser1962a,
-	Author = {Visser, W. A., and Hermes, J. J.},
+	Author = {Visser, W. A. and Hermes, J. J.},
 	Date-Added = {2019-09-10 17:02:41 -0700},
-	Date-Modified = {2019-09-10 17:05:04 -0700},
+	Date-Modified = {2020-08-13 07:46:58 -0700},
 	Publisher = {Staatsdrukkerij-en Uitgeverijbedrijf},
 	Title = {Geological results of the exploration for oil in {N}etherlands {N}ew {G}uinea, carried out by the {N}etherlandsche {N}ieuw {G}uinee {P}etroleum {M}aatschappij, 1935-1960},
 	Year = {1962}}
