--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -148,7 +148,7 @@ The results of our ``paleo-SEAI'' scenarios highlight the importance of the comb
 
 Previous work has estimated that the decrease in \pCOtwo since 5~Ma associated with the emergence of the SEAI and enhanced silicate weathering is $\sim$19~ppm \cite{Molnar2015a}, in which case their emergence would be a relatively minor contributor to Neogene cooling. This 19~ppm estimate was obtained using an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor that is intended to account for the influence of both runoff and temperature. \pCOtwo was then estimated from the calculated temperature using a simple energy balance equation. However, the relationship between mean global temperature (or \pCOtwo) and weathering-rate-weighted land area is not linear. Furthermore, this simple linear relationship ignores spatial variability in topography and climatology, and only crudely accounts for spatial variability in lithology. In fact, the 19~ppm estimate is closer in magnitude to the decrease in \pCOtwo that we estimate if mafic volcanics associated with the Deccan Traps (a relatively flat area outside of the warm and wet tropics) are replaced with the Ca+Mg concentration of bulk continental crust (22--70 ppm; Fig. \ref{fig:scenario_pCO2}). The significant difference in steady-state \pCOtwo estimated between the ``removed Deccan Traps'' scenario and the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2}) demonstrates that considering changes in the spatial distribution of lithologies alone is not adequate for estimating changes in steady-state \pCOtwo. Instead, spatially varying topography and climatology significantly modulates silicate weathering rates, and must be accounted for when estimating \pCOtwo change associated with paleogeographic change.
 
-An important caveat for these estimates of \pCOtwo is that our modeling is determining the climatology in the GFDL CM2.0 model at which steady-state is achieved -- a climatology that has an associated \pCOtwo value in the model. However, climate models are variable in their response to changes in \pCOtwo. One way to summarize this variability is through the equilibrium climate sensitivity value -- the steady-state change in global mean surface air temperature associated with a doubling of \pCOtwo. A range of 1.5 to 4.5\degreesC per \pCOtwo doubling was proposed in the landmark Charney report \cite{Charney1979a} and this range was considered to be the credible interval (\textgreater66\% likelihood) in the last IPCC report \cite{Stocker2013a}. Integrating constraints both from understanding of climate feedback processes and the climate record, a recent comprehensive review estimates the 66\% probability range of climate sensitivity to be 2.6 to 3.9\degreesC per \pCOtwo doubling with a 5 to 95\% range of 2.3 to 4.7\degreesC per \pCOtwo doubling \cite{Sherwood2020a}. The equilibrium climate sensitivity associated with the CM2.0 climate models is 2.9\degreesC per \pCOtwo doubling which falls within these ranges although these ranges remain broad. An alternative way to consider the results from our analysis would be that an estimate of 572~ppm (2\times pre-industrial \pCOtwo) for the 15~Ma paleo-SEAI scenario is implying that Earth would be $\sim$2.9\degreesC warmer. If Earth's climate sensitivity is at the higher end of the probable range and higher than in the CM2.0 model, as it is in some climate models, this same amount of Neogene cooling resulting from the emergence of the SEAI could have been driven by a smaller change in \pCOtwo.
+An important caveat for these estimates of \pCOtwo is that our modeling is determining the climatology in the GFDL CM2.0 model at which steady-state is achieved -- a climatology that has an associated \pCOtwo value in the model. However, climate models are variable in their response to changes in \pCOtwo. One way to summarize this variability is through the equilibrium climate sensitivity value -- the steady-state change in global mean surface air temperature associated with a doubling of \pCOtwo. A range of 1.5 to 4.5\degreesC per \pCOtwo doubling was proposed in the landmark Charney report \cite{Charney1979a} and this range was considered to be the credible interval (\textgreater66\% likelihood) in the last IPCC report \cite{Stocker2013a}. Integrating constraints both from understanding of climate feedback processes and the climate record, a recent comprehensive review estimates the 66\% probability range of climate sensitivity to be 2.6 to 3.9\degreesC per \pCOtwo doubling with a 5 to 95\% range of 2.3 to 4.7\degreesC per \pCOtwo doubling \cite{Sherwood2020a}. The equilibrium climate sensitivity associated with the CM2.0 climate models is 2.9\degreesC per \pCOtwo doubling, which falls within these ranges although these ranges remain broad. An alternative way to consider the results from our analysis would be that an estimate of 572~ppm (2$\times$ pre-industrial \pCOtwo) for the 15~Ma ``paleo-SEAI'' scenario is implying that Earth would be $\sim$2.9\degreesC warmer. If Earth's climate sensitivity is at the higher end of the probable range and higher than in the CM2.0 model, as it is in some climate models, this same amount of Neogene cooling resulting from the emergence of the SEAI could have been driven by a smaller change in \pCOtwo.
 
 \section*{Alternative Mechanisms for Neogene Cooling}
 
