--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -236,7 +236,7 @@ Each parameter combination predicts a different total \COtwo consumption that sh
     \label{fig:lithology_composition}
 \end{figure}
 
-A related issue is that our analysis focuses on the weathering of Ca and Mg silicates. Sources of alkalinity to the ocean include the four major cations of Ca, Mg, Na and K. A common approach for the long-term carbon cycle follows that of \citet{Berner1983a} where an emphasis is placed on Ca and Mg with the weathering of Na and K silicates considered to not be a long-term sink of \COtwo. The reasoning behind this assumption is that while weathering of these silicates can lead to transient uptake of \COtwo, this uptake is balanced by release. The ultimate mechanism through which silicate weathering sequesters carbon is the incorporation of Ca+Mg carbonates into the lithosphere. Given that Na and K are not precipitating carbonate, when simulating long term steady-state solutions, as we are here, it is valid to follow the approach of \citet{Berner1983a} and not consider the Na-K-\COtwo cycles. Complexity arises given the long residence time of Na and K in seawater and the lag between the generation of alkalinity and its consumption that could modulate the carbonate system. Dynamic modeling of the effects of the Na and K cycles on the long term carbon cycle is an area ripe for future research although uncertainty in their sinks and the timescale of the processes that control them make them difficult to parameterize. An alternative approach for estimating carbon sequestration associated with silicate weathering that sought to incorporate all four cations was taken by \citet{France-Lanord1997a} who used a formulation of $\Delta \textrm{CO}_2 = \Delta \textrm{Mg} + \Delta \textrm{Ca} + 0.15 \Delta \textrm{Na} + 0.1 \Delta \textrm{K}$. This relationship, also applied by \citet{Schopka2011a}, assumes that all Ca$^{2+}$ and Mg$^{2+}$ eventually forms carbonates and applies an estimate that 20\% of K$^{+}$ and 30\% of Na$^{+}$ exchanges for Ca and Mg and ultimately produces carbonate (and considers charge balance). Different parameterizations such as that of \citet{France-Lanord1997a} could modulate our estimates, but the importance of the emergence of the SEAI on Neogene \pCOtwo would remain unchanged. The relative importance of mafic lithologies also remains given that with significantly higher Ca+Mg concentrations and subequal Na+K concentrations to intermediate/felsic lithologies they have the highest Ca+Mg+Na+K concentrations (Fig. \ref{fig:lithology_composition}).
+A related issue is that our analysis focuses on the weathering of Ca and Mg silicates. Sources of alkalinity to the ocean include the four major cations of Ca, Mg, Na and K. A common approach for the long-term carbon cycle follows that of \citet{Berner1983a} where an emphasis is placed on Ca and Mg with the weathering of Na and K silicates considered to not be a long-term sink of \COtwo. The reasoning behind this assumption is that while weathering of these silicates can lead to transient uptake of \COtwo, this uptake is balanced by release. The ultimate mechanism through which silicate weathering sequesters carbon is the incorporation of Ca+Mg carbonates into the lithosphere. Given that Na and K are not precipitating carbonate, when simulating long term steady-state solutions, as we are here, it is valid to follow the approach of \citet{Berner1983a} and not consider the Na and K cycles. Complexity arises given the long residence time of Na and K in seawater ($\sim$45--80~m.y. for Na, and $\sim$8--10~m.y. for K; \citealp{Emerson2008a, Lecuyer2016a}) and the lag between the generation of alkalinity and its consumption that could modulate the carbonate system. Dynamic modeling of the effects of the Na and K cycles on the long term carbon cycle is an area ripe for future research although uncertainty in their sinks and the timescale of the processes that control them make them difficult to parameterize. An alternative approach for estimating carbon sequestration associated with silicate weathering that sought to incorporate all four cations was taken by \citet{France-Lanord1997a} who used a formulation of $\Delta \textrm{CO}_2 = \Delta \textrm{Mg} + \Delta \textrm{Ca} + 0.15 \Delta \textrm{Na} + 0.1 \Delta \textrm{K}$. This relationship, also applied by \citet{Schopka2011a}, assumes that all Ca$^{2+}$ and Mg$^{2+}$ eventually forms carbonates and applies an estimate that 20\% of K$^{+}$ and 30\% of Na$^{+}$ exchanges for Ca and Mg and ultimately produces carbonate (and considers charge balance). Different parameterizations such as that of \citet{France-Lanord1997a} could modulate our estimates, but the importance of the emergence of the SEAI on Neogene \pCOtwo would remain unchanged. The relative importance of mafic lithologies also remains given that with significantly higher Ca+Mg concentrations and subequal Na+K concentrations to intermediate/felsic lithologies they have the highest Ca+Mg+Na+K concentrations (Fig. \ref{fig:lithology_composition}).
 
 \section*{Climate Model}
 
