Updates from Overleaf

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -70,7 +70,7 @@
 \pagestyle{myheadings}
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{Park et al., in preparation}
+\lhead{Park et al.}
 \rhead{\thepage}
 
 \begin{document}
